--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grameen Creative Lab</title>
+    <link rel="stylesheet" href="./styles/pages/home/home.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>heading 1 </h1>
+    <h2>About Us</h2>
+    <h3>heading 3</h3>
+    <h4>heading 4</h4>
+    <h5>heading 5</h5>
+    <h6>heading 6</h6>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti odio doloremque tempore nemo. Voluptatibus laborum, odit voluptates ex necessitatibus aliquam eveniet dignissimos eaque nesciunt distinctio veniam sapiente nostrum inventore consequuntur!</p>
+    <a href="#">link</a>
 </body>
 </html>
