home page header

--- a/index.html
+++ b/index.html
@@ -5,16 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grameen Creative Lab</title>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
     <link rel="stylesheet" href="./styles/pages/home/home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-    <h1>heading 1 </h1>
-    <h2>About Us</h2>
-    <h3>heading 3</h3>
-    <h4>heading 4</h4>
-    <h5>heading 5</h5>
-    <h6>heading 6</h6>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti odio doloremque tempore nemo. Voluptatibus laborum, odit voluptates ex necessitatibus aliquam eveniet dignissimos eaque nesciunt distinctio veniam sapiente nostrum inventore consequuntur!</p>
-    <a href="#">link</a>
+    <header class="header-section">
+        <nav>
+            <div class="logo">
+                <img src="./assets/gcl_logo.png" alt="gcl-logo">
+            </div>
+            <div class="main-menu">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Social Business</a>
+                <a href="#">Services</a>
+                <a href="#">Community</a>
+                <a href="#">Contact</a>
+            </div>
+            <div class="menu-btn">
+                <h2>X</h2>
+            </div>
+        </nav>
+    </header>
+    <section class="header-banner">
+        
+    </section>
+    <script src="./js/navbar.js"></script>
 </body>
 </html>
