about page 80% complete, base font-size set to 62.5%

--- a/about.html
+++ b/about.html
@@ -11,12 +11,151 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <!-- <header>
+        
+    </header> -->
+    <main class="about">
+        <header class="about__header">
+            <div class="about__header--content">
+                <h2 class="heading">Unleashing the Power of Social Business to Bring Solutions to solve societies most pressing needs</h2>
+            </div>
+        </header>
 
-    </header>
-    <main>
-        <section class="hero-section">
-            
+        <section class="about__us">
+            <div class="container-1">
+                <h1 class="about__us--heading">About us</h1>
+                <div class="about__us--btn-group">
+                    <div class="group-1">
+                        <button class="btn">Our History</button>
+                        <button class="btn">Our Vision & Mission</button>
+                        <button class="btn">The Spirit of YY</button>
+                    </div>
+                    <div class="group-2">
+                        <button class="btn">Our Contribution</button>
+                        <button class="btn">Our Team</button>
+                        <button class="btn">Our Family</button>
+                    </div>
+                </div>
+            </div>
+            <div class="about__us--info">
+                <div class="info-1 text-container">
+                    <h3 class="mb-2">Our History</h3>
+                    <div class="content">
+                        <p>In April 2008, Professor Muhammad Yunus visited Germany. A first contact between Grameen and BASF, one of Hans Reitz's clients, was established. Together with Mr. Hambrecht, CEO of BASF, they developed an idea of a Joint Venture between BASF and Grameen.</p>
+                        <p>During 2008, Professor Yunus and Hans Reitz deepened their relationship and agreed on a close collaboration. Hans Reitz became Professor Yunus' creative advisor and friend.</p>
+                        <p>In January 2009, this relationship was formalized - The Grameen Creative Lab was founded as a Joint Venture between the Yunus Centre in Bangladesh and circ-responsibility, a PR consulting company in Germany. Their shared vision has been to fight poverty by accelerating Grameen Social Business. Its first success was the Joint Venture between Grameen and BASF.</p>
+                        <p>The Grameen Creative Lab is a Grameen Social Business itself. We finance ourselves through the products and services within each pillar. Any profits will be reinvested into further accelerating Grameen Social Business and sharing Grameen’s and Professor Yunus’ concepts and ideas with companies, universities, NGOs, students, investors and more.</p>
+                    </div>
+                </div>
+                <div class="image-1 img-container">
+                    <img src="/assets/images/about_1.jpg" alt="image 1" class="img">
+                </div>
+                <div class="info-2 text-container">
+                    <h3 class="mb-2">Our vision, mission & values</h3>
+                    <div class="content">
+                        <p>Through creating an ecosystem where social business flourishes and solves the most pressing problems of our times, we are paving the way for a world of three zeroes-zero poverty, zero unemployment and zero net carbon emissions.</p>
+                        <p>Everything we do needs to have at its core a social objective. Everything we do has the aim to serve society's most pressing needs.</p>
+                        <p>Our 3 core values are bold, competitive and creative. True to the principles of social business, we encourage product offerings that can compete in the market, we believe in applied creativity and innovation to solve problems and we bring brevity, transparency and honesty to all that we do.</p>
+                    </div>
+                </div>
+                <div class="image-2 img-container">
+                    <img src="/assets/images/about_2.jpg" alt="image 1" class="img">
+                </div>
+                <div class="info-3 text-container">
+                    <h3 class="mb-2">The Spirit of YY Yunus + Your Mission</h3>
+                    <div class="content">
+                        <p>With the tools created by Professor Muhammad Yunus, You can create an impact! We live by our principle of social business and "do it with joy". This creative and entrepreneurial spirit, along with our expertise and know-how accumulated over the years helps us to create the most innovative solutions to social problems.</p>
+                    </div>
+                </div>
+                <div class="image-3 img-container">
+                    <img src="/assets/images/about_3.jpg" alt="image 1" class="img">
+                </div>                
+            </div>
+        </section>
+        <section class="about__contribution container-1">
+            <div class="container">
+                <h3>Our Contribution</h3>
+                <p class="text">In providing our services, we contribute to the achievement of Sustainable Development Goals, while always contributing to Professor Yunus' vision of "A World of Three Zeroes: Zero Poverty, Zero Unemployment and Zero Net Carbon Emissions.</p>
+                <div class="logo-container">
+                    <img src="/assets/logo/sdg-logo.png" class="logo" alt="SDG logo">
+                    <img src="/assets/logo/zero_club-logo.png" class="logo" alt="zero-club logo">
+                </div>
+            </div>
+        </section>
+        <section class="about__team container-1">
+            <h3 class="about__team--heading">Our Team</h3>
+            <div class="about__team--container">
+                <div class="member">
+                    <div class="img-container">
+                        <img src="/assets/images/member-1.png" class="member__img" alt="team member image">
+                    </div>
+                    <h5 class="member__name">Maria Ida Palmieri</h5>
+                    <p class="member__designation">Managing Partner</p>
+                </div>
+                <div class="member">
+                    <div class="img-container">
+                        <img src="/assets/images/member-1.png" class="member__img" alt="team member image">
+                    </div>
+                    <h5 class="member__name">Maria Ida Palmieri</h5>
+                    <p class="member__designation">Managing Partner</p>
+                </div>
+                <div class="member">
+                    <div class="img-container">
+                        <img src="/assets/images/member-1.png" class="member__img" alt="team member image">
+                    </div>
+                    <h5 class="member__name">Maria Ida Palmieri</h5>
+                    <p class="member__designation">Managing Partner</p>
+                </div>
+                <div class="member">
+                    <div class="img-container">
+                        <img src="/assets/images/member-1.png" class="member__img" alt="team member image">
+                    </div>
+                    <h5 class="member__name">Maria Ida Palmieri</h5>
+                    <p class="member__designation">Managing Partner</p>
+                </div>
+                <div class="member">
+                    <div class="img-container">
+                        <img src="/assets/images/member-1.png" class="member__img" alt="team member image">
+                    </div>
+                    <h5 class="member__name">Maria Ida Palmieri</h5>
+                    <p class="member__designation">Managing Partner</p>
+                </div>
+                <div class="member">
+                    <div class="img-container">
+                        <img src="/assets/images/member-1.png" class="member__img" alt="team member image">
+                    </div>
+                    <h5 class="member__name">Maria Ida Palmieri</h5>
+                    <p class="member__designation">Managing Partner</p>
+                </div>
+                <div class="member">
+                    <div class="img-container">
+                        <img src="/assets/images/member-1.png" class="member__img" alt="team member image">
+                    </div>
+                    <h5 class="member__name">Maria Ida Palmieri</h5>
+                    <p class="member__designation">Managing Partner</p>
+                </div>
+                <div class="member">
+                    <div class="img-container">
+                        <img src="/assets/images/member-1.png" class="member__img" alt="team member image">
+                    </div>
+                    <h5 class="member__name">Maria Ida Palmieri</h5>
+                    <p class="member__designation">Managing Partner</p>
+                </div>
+                <div class="member">
+                    <div class="img-container">
+                        <img src="/assets/images/member-1.png" class="member__img" alt="team member image">
+                    </div>
+                    <h5 class="member__name">Maria Ida Palmieri</h5>
+                    <p class="member__designation">Managing Partner</p>
+                </div>
+                <div class="member">
+                    <div class="img-container">
+                        <img src="/assets/images/member-1.png" class="member__img" alt="team member image">
+                    </div>
+                    <h5 class="member__name">Maria Ida Palmieri</h5>
+                    <p class="member__designation">Managing Partner</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
