navbar, responsive, active funtion

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grameen Creative Lab</title>
+    <title>The Grameen Creative Lab</title>
     <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
     <link rel="stylesheet" href="./styles/pages/home/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,18 +14,20 @@
     <header class="header-section">
         <nav>
             <div class="logo">
-                <img src="./assets/gcl_logo.png" alt="gcl-logo">
+                <a href="/"><img src="./assets/gcl_logo.png" alt="gcl-logo"></a>
             </div>
-            <div class="main-menu">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Social Business</a>
-                <a href="#">Services</a>
-                <a href="#">Community</a>
-                <a href="#">Contact</a>
-            </div>
-            <div class="menu-btn">
-                <h2>X</h2>
+            <ul class="nav-links" id="navMenu">
+                <li><a href="/">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Social Business</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="burger">
+                <div class="burger-line line1"></div>
+                <div class="burger-line line2"></div>
+                <div class="burger-line line3"></div>
             </div>
         </nav>
     </header>
