--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <ul class="nav-links" id="navMenu">
                 <li><a href="/">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/about.html">About</a></li>
                 <li><a href="#">Social Business</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Community</a></li>
