clean code, button component sass

--- a/about.html
+++ b/about.html
@@ -7,33 +7,58 @@
 
     <link rel="stylesheet" href="./styles/base/base-style.css">
     <link rel="stylesheet" href="./styles/pages/about/about.css">
+    <link rel="stylesheet" href="./styles/components/header/header.css">
 
     <title>Document</title>
 </head>
 <body>
-    <!-- <header>
-        
-    </header> -->
+    <!-- HEADER START -->
+    <header class="header-section">
+        <nav>
+            <div class="logo">
+                <a href="/"><img src="./assets/gcl_logo.png" alt="gcl-logo"></a>
+            </div>
+            <ul class="nav-links" id="navMenu">
+                <li><a href="/">Home</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="#">Social Business</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="burger">
+                <div class="burger-line line1"></div>
+                <div class="burger-line line2"></div>
+                <div class="burger-line line3"></div>
+            </div>
+        </nav>
+    </header>
+    <!-- HEADER END -->
+
+    <!-- MAIN BODY START -->
     <main class="about">
-        <header class="about__header">
+        <!-- FIRST SECTION START -->
+        <section class="about__header">
             <div class="about__header--content">
                 <h2 class="heading">Unleashing the Power of Social Business to Bring Solutions to solve societies most pressing needs</h2>
             </div>
-        </header>
+        </section>
+        <!-- FIRST SECTION START -->
 
+        <!-- ABOUT US SECTION START -->
         <section class="about__us">
             <div class="container-1">
                 <h1 class="about__us--heading">About us</h1>
                 <div class="about__us--btn-group">
                     <div class="group-1">
-                        <button class="btn">Our History</button>
-                        <button class="btn">Our Vision & Mission</button>
-                        <button class="btn">The Spirit of YY</button>
+                        <button class="btn btn-primary">Our History</button>
+                        <button class="btn btn-primary">Our Vision & Mission</button>
+                        <button class="btn btn-primary">The Spirit of YY</button>
                     </div>
                     <div class="group-2">
-                        <button class="btn">Our Contribution</button>
-                        <button class="btn">Our Team</button>
-                        <button class="btn">Our Family</button>
+                        <button class="btn btn-primary">Our Contribution</button>
+                        <button class="btn btn-primary">Our Team</button>
+                        <button class="btn btn-primary">Our Family</button>
                     </div>
                 </div>
             </div>
@@ -72,6 +97,9 @@
                 </div>                
             </div>
         </section>
+        <!-- ABOUT US SECTION END -->
+
+        <!-- CONTRIBUTION SECTION START -->
         <section class="about__contribution container-1">
             <div class="container">
                 <h3>Our Contribution</h3>
@@ -82,6 +110,9 @@
                 </div>
             </div>
         </section>
+        <!-- CONTRIBUTION SECTION END -->
+
+        <!-- TEAM SECTION START -->
         <section class="about__team container-1">
             <h3 class="about__team--heading">Our Team</h3>
             <div class="about__team--container">
@@ -156,10 +187,22 @@
                     <p class="member__designation">Managing Partner</p>
                 </div>
             </div>
+            <div class="about__team--box">
+                <button class="btn btn-secondary">join the team</button>
+            </div>
         </section>
+        <!-- TEAM SECTION END -->
+
+
     </main>
+    <!-- MAIN BODY END -->
+
+    <!-- FOOTER START-->
     <footer>
 
     </footer>
+    <!-- FOOTER END-->
+
+    <script src="./js/navbar.js"></script>
 </body>
 </html>
