who are section

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <!-- who we are -->
 
     <section class="who-we-are">
+        <!-- who we are -->
         <div class="who-we-are-header">
             <div class="header-content">
                 <h2>Who we are</h2>
@@ -109,6 +110,14 @@
                     and Chairman Nobel Peace Laureate Muhammad Yunus, of creating an ecosystem where social business
                     strives to solve the most pressing social and environmental problems of our times.</p>
                 <a href="/">learn more</a>
+            </div>
+        </div>
+
+        <!-- what we do -->
+        <div class="what-we-do-container">
+            <div class="what-we-do-header">
+                <h2>What we do</h2>
+                <img src="./assets/icons/ecllipse.svg" alt="">
             </div>
         </div>
     </section>
