about page complete with out responsive

--- a/about.html
+++ b/about.html
@@ -193,6 +193,19 @@
         </section>
         <!-- TEAM SECTION END -->
 
+        <!-- FAMILY SECTION END -->
+        <section class="about__family container-1">
+            <h3 class="about__family--heading">Our family</h3>
+            <div class="about__family--logo-container">
+                <a href="#"><img src="/assets/logo/yunus_centre-logo.png" alt="family logo"></a>
+                <a href="#"><img src="/assets/logo/yunus_environment_hub-logo.png" alt="family logo"></a>
+                <a href="#"><img src="/assets/logo/yunus_social_business-logo.png" alt="family logo"></a>
+                <a href="#"><img src="/assets/logo/yunus_sports_hub-logo.png" alt="family logo"></a>
+                <a href="#"><img src="/assets/logo/yygoshti-logo.png" alt="family logo"></a>
+                <a href="#"><img src="/assets/logo/yyventures-logo.png" alt="family logo"></a>
+                <a href="#"><img src="/assets/logo/zero_club-logo.png" alt="family logo"></a>
+            </div>
+        </section>
 
     </main>
     <!-- MAIN BODY END -->
