--- a/index.html
+++ b/index.html
@@ -78,17 +78,11 @@
                 </div>
                 <div class="person-quote">
                     <div>
-                        <p class="quote">“Unprecedented technological capabilities combined with unlimited human
-                            creativity have
-                            given us tremendous power to take on intractable problems like poverty, unemployment,
-                            disease, and
-                            environmental degradation. Our challenge is to translate this extraordinary potential into
-                            meaningful
-                            change.”
+                        <p class="quote">“Let us reveal the power of social, which is creativity. business to the world not only by our words, but our actions.Let us go further and mobilise all our skills and trust in our endless resource of energy.”
                         </p>
                         <div class="designation">
                             <p>Hans Reitz</p>
-                            <p>Creative Advisor to Prof. Muhammad Yunus,</p>
+                            <p>Creative Advisor to Professor Muhammad Yunus,</p>
                             <p>Head of Global Social Business Summit,</p>
                             <p>CEO The Grameen Creative Lab </p>
                         </div>
@@ -117,6 +111,16 @@
             <div class="what-we-do-header">
                 <h2>What we do</h2>
                 <img src="./assets/icons/ecllipse.svg" alt="">
+            </div>
+            <div class="what-we-do-body">
+                <div class="inspire-grid">
+                    <div class="inspire-left">
+                        <h2>left</h2>
+                    </div>
+                    <div class="inspire-right">
+                        <h2>right</h2>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
