home slider, counter, brands

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./styles/slick.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -94,7 +96,7 @@
 
     <!-- who we are -->
 
-    <section class="who-we-are">
+    <section class="who-we-are" id="who_we_are">
         <!-- who we are -->
         <div class="who-we-are-header">
             <div class="header-content">
@@ -113,15 +115,185 @@
                 <img src="./assets/icons/ecllipse.svg" alt="">
             </div>
             <div class="what-we-do-body">
+                <!-- inspire grid -->
                 <div class="inspire-grid">
-                    <div class="inspire-left">
-                        <h2>left</h2>
+                    <div class="inspire-left" id="inspireLeft">
+                        <p>We promote the concept of social business and inspire our ecosystem to change the world through our events, communication campaigns, and workshops for various organizations. We design and deliver:</p>
+                        <div class="listings">
+                            <ol>
+                                <li>International platforms such as Global Social Business Summit, the flagship and biggest event on social business</li>
+                                <li>Transformative workshops and trainings</li>
+                                <li>Innovative campaigns around change and impact with social business</li>
+                            </ol>
+                        </div>
                     </div>
                     <div class="inspire-right">
-                        <h2>right</h2>
+                        <div class="inspire-image-number">
+                            <div class="leaf-img" id="inspireImg">
+                                <img src="./assets/home_what_we_do_1.png" alt="">
+                            </div>
+                            <div class="leaf-title">
+                                <h2>01</h2>
+                                <h3>Inspire</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- educate -->
+                <div class="educate-grid">
+                    <div class="educate-left">
+                        <div class="educate-image-number">
+                            <div class="leaf-img" id="educateImg">
+                                <img src="./assets/home_what_we_do_2.png" alt="">
+                            </div>
+                            <div class="leaf-title">
+                                <h2>02</h2>
+                                <h3>Educate</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="educate-right" id="educateRight">
+                        <p>We design and offer a range of trainings and capacity building programs. Our goal is to transform mindsets and create responsible leaders who are aware of the role of social business in solving global challenges.</p>
+                        <div class="listings">
+                            <ol>
+                                <li>Skill development programs such as Social Business Labs, ideation contests and system thinking workshops</li>
+                                <li>Leadership and capacity building programs to foster employee engagement and intrepreneurship programs with social business</li>
+                                <li>Strategic and self development programs to encourage responsible leadership at junior and senior level</li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+                <!-- create -->
+                <div class="create-grid">
+                    <div class="create-left" id="createLeft">
+                        <p>We incubate social businesses by consulting corporations, foundations and social business entrepreneurs.</p>
+                        <div class="listings">
+                            <ol>
+                                <li>Partner to form ambitious joint venture social businesses between corporates and the Grameen ecosystem</li>
+                                <li>Collaborate with public private and multi stakeholder partners to create an infrastructure for social businesses (e.g. Social Business City Concept)</li>
+                                <li>Shape an ecosystem for social businesses within a country or region through acceleration and incubation programs</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="create-right">
+                        <div class="create-image-number">
+                            <div class="leaf-img" id="createImg">
+                                <img src="./assets/home_what_we_do_3.png" alt="">
+                            </div>
+                            <div class="leaf-title">
+                                <h2>03</h2>
+                                <h3>Create</h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- our impact -->
+
+    <section class="our-impact-container" id="ourImpact">
+        <div class="impact-header">
+            <img src="./assets/icons/right-curve.svg" alt="">
+            <h2>Our impact</h2>
+            <img src="./assets/icons/left-curve.svg" alt="">
+        </div>
+        <div class="impact-body">
+            <div class="impact-data">
+                <h2 id="impact1">1000000</h2>
+                <p>People inspired and educated through our learning journeys</p>
+            </div>
+            <div class="impact-data">
+                <h2 id="impact2">50000</h2>
+                <p>Young and Senior leaders trained</p>
+            </div>
+            <div class="impact-data">
+                <h2 id="impact3">1000</h2>
+                <p>Social business and ideas supported and accelerated</p>
+            </div>
+        </div>
+        <div class="impact-footer">
+            <a href="/">discover our project</a>
+        </div>
+    </section>
+
+    <!-- home highlight -->
+
+    <section class="home-highlight">
+        <div class="highlight-header">
+            <h2>Highlights</h2>
+        </div>
+        <div class="highlight-body highlight-slider-container">
+            <div class="highlight-box">
+                <img src="./assets/highlights.jpg" alt="">.
+                <a href="/">learn more</a>
+            </div>
+            <div class="highlight-box">
+                <img src="./assets/highlights.jpg" alt="">
+                <a href="/">learn more</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- what people say -->
+
+    <section class="people-say-container">
+        <div class="people-say-header">
+            <h2>What people say about us...</h2>
+        </div>
+        <div class="people-say-body testimony-slider-container">
+            <div class="testimony-data">
+                <div class="testimony-flex">
+                    <p class="quote">"We are very thankful for the creative impulses from Professor Yunus and the Grameen Creative Lab that led to the creation of a Solidarity Investment Fund. We are now looking forward to shaping the next project together with GCL."</p>
+                    <p class="quote-author">Claudia Belli, Head of Social Business and Microfinance BNP Paribas</p>
+                    <img src="./assets/logo/testimony/testimony_1.png" alt="">
+                </div>
+            </div>
+            <div class="testimony-data">
+                <div class="testimony-flex">
+                    <p class="quote">"Without Hans, Lamiya and the guiding spirit of Professor Yunus, One Young World would not exist. Thank you from the bottom of my heart for 11 years of support. We will never forget."</p>
+                    <p class="quote-author">Kate Robertson, Co-Founder One Young World</p>
+                    <img src="./assets/logo/testimony/testimony_2.png" alt="">
+                </div>
+            </div>
+            <div class="testimony-data">
+                <div class="testimony-flex">
+                    <p class="quote">"Full of inspiration from the 'summer of purpose', we are convinced that our partnership with the Grameen Creative Lab pays off in the sustainable creation of a value-oriented future."</p>
+                    <p class="quote-author">Christian Heller, Chief Executive Officer Value Balancing Alliance</p>
+                    <img src="./assets/logo/testimony/testimony_3.png" alt="">
+                </div>
+            </div>
+            <div class="testimony-data">
+                <div class="testimony-flex">
+                    <p class="quote">"With 'shaping mobility for generations to come' and a social business approach - which follows the triad of economic, ecological and social action - we at Volkswagen AG are facing up to change."</p>
+                    <p class="quote-author">Gunnar Kilian, Member of the Management Board Volkswagen AG</p>
+                    <img src="./assets/logo/testimony/testimony_4.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- partnerships -->
+
+    <section class="home-partnerships-section">
+        <div class="partnership-header">
+            <h2>Who worked with us</h2>
+            <p>In the past 10 years various organizations and leaders have joined our ecosystem to create an impact through social business. These are some of many. </p>
+        </div>
+        <div class="partnership-body">
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/BNPP_LOGO_FR_H_DIGI_RVB.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/KofiAnnanAward-Logo-RZ_Gradient.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/R958cc00f9e73dd836e612bc0c0b3a9f6.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/crop_original_albatros.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/Hec.jpg" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/Global_Shapers_Logo.svg.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/erste.svg" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/otto.svg" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/MM_rgb_logo.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/Skoll_LOGO_RGB_KEYLINE.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/oyw-munich2021-logo-blue-web.png" alt=""></a></div>
+            <div class="brand-container"><a href="/"><img src="./assets/images/brands/National_University_of_Singapore_logo_NUS.png" alt=""></a></div>
         </div>
     </section>
 
@@ -129,6 +301,8 @@
     <script src="./js/navbar.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/customSlick.js"></script>
+    <script src="./js/hoverGrid.js"></script>
+    <script src="./js/counterNumber.js"></script>
 </body>
 
 </html>
